--- a/templates/home.html
+++ b/templates/home.html
@@ -2,4 +2,11 @@
 
 {% block content %}
 <h1>Hello dudes and dudettes!</h1>	
+
+<form method="POST" action="">
+{% csrf_token %}
+{{ form.as_p }}
+<input type="submit" value="Join" class="btn" />
+</form>
+
 {% endblock %}
